# revit-mcp-bridge

./: .gitignore  LICENSE  README.md  SETUP.md  install.ps1  pyproject.toml
.github/workflows/: build.yml  release.yml
RevitMCP.Addin/: CommandRouter.cs  Config.cs  HttpServer.cs  Log.cs  McpException.cs  RequestHandler.cs  RevitDispatcher.cs  RevitMCP.Addin.csproj  RevitMCP.addin  RevitMcpApp.cs
mcp_server/: __init__.py  server.py
